RESOLVED FIXED 70606
[GTK] Missing DRT AccessibilityController::addNotificationListener implementation
https://bugs.webkit.org/show_bug.cgi?id=70606
Summary [GTK] Missing DRT AccessibilityController::addNotificationListener implementa...
Philippe Normand
Reported 2011-10-21 07:29:13 PDT
accessibility/menu-list-sends-change-notification.html requires this feature. Will skip the test for now.
Attachments
Patch (8.64 KB, patch)
2013-08-29 06:46 PDT, Denis Nomiyama (dnomi)
no flags
Patch (3.85 KB, patch)
2013-09-10 07:47 PDT, Denis Nomiyama (dnomi)
no flags
Philippe Normand
Comment 1 2011-11-23 01:07:00 PST
*** Bug 73009 has been marked as a duplicate of this bug. ***
Joanmarie Diggs
Comment 2 2012-12-09 17:02:13 PST
Taking this one as it appears fixing it will make it possible to unskip quite a few tests.
Denis Nomiyama (dnomi)
Comment 3 2013-08-28 07:46:09 PDT
I've raised a new bug 120419 for the problem reported at the description (menu-list-sends-change-notification.html) because it actually requires the implementation of AccessibilityUIElement::addNotificationListener(), which was done at bug 119883.
Denis Nomiyama (dnomi)
Comment 4 2013-08-29 06:46:55 PDT
Denis Nomiyama (dnomi)
Comment 5 2013-09-06 02:18:42 PDT
Comment on attachment 209971 [details] Patch Some changes suggested in bug 120416 will affect the implementation of this patch. So I will re-work it after bug 120416 is resolved.
Denis Nomiyama (dnomi)
Comment 6 2013-09-10 07:47:57 PDT
Mario Sanchez Prada
Comment 7 2013-09-10 08:55:43 PDT
Comment on attachment 211201 [details] Patch Lgtm
WebKit Commit Bot
Comment 8 2013-09-10 09:19:03 PDT
Comment on attachment 211201 [details] Patch Clearing flags on attachment: 211201 Committed r155448: <http://trac.webkit.org/changeset/155448>
WebKit Commit Bot
Comment 9 2013-09-10 09:19:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.