[GTK] Missing DRT AccessibilityController::addNotificationListener implementation https://bugs.webkit.org/show_bug.cgi?id=70606

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-09-10
Reviewed by Mario Sanchez Prada.

Implemented the global notification listener for
AccessibilityController. The signal is generated by
AXObjectCache::postPlatformNotification() and received by
axObjectEventListener(). axObjectEventListener will then invoke
JSObjectCallAsFunction() with the respective callback function.

There is no additional test for this patch since its implementation will
be tested by a11y layout tests that are currently skipped (e.g. bug
98370).

* DumpRenderTree/AccessibilityController.h: Added a global notification
handler for GTK+.
* DumpRenderTree/atk/AccessibilityControllerAtk.cpp:
(AccessibilityController::AccessibilityController): Initializes the
global handler with 0.
(AccessibilityController::addNotificationListener): Creates the
notification handler and sets the notification function callback.
(AccessibilityController::removeNotificationListener): Removes the
global handler.

Canonical link: https://commits.webkit.org/139015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155448 268f45cc-cd09-0410-ab3c-d52691b4dbfc